--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ujq",
-  "version": "0.0.1",
+  "version": "0.0.28",
   "description": "Universal Job Queue (UJQ) is a redis based multi platform supported Job management library. This can be used to create, update and delete a job which different aplication or micro-services can work together. Currently supported are node and python.",
   "main": "index.js",
   "scripts": {
@@ -23,5 +23,9 @@
   "dependencies": {
     "redis": "^3.0.2",
     "rsmq": "^0.12.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Krishnaraj2003/UJQ.git"
   }
 }
